Diseño de la aplicacion con css y responsive design junto con la funcionalidad de encriptar un texto

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
             </div>
         </div>
         <div class="encriptado">
-            <img src="" alt="" id="imagen-encriptado">
+            <img src="img/cerrojo.png" alt="" id="imagenEncriptado">
             <div class="mensaje-encriptado" id="mensaje-encriptado">
                 <h2 id="titulo-mensaje">Ningun mensaje encontrado</h2>
                 <p id="parrafo">Ingresa el texto que deseas encriptar o desencriptar</p>
-                <textarea name="mensaje" id="mensaje" cols="30" rows="10" class="mensaje"></textarea>
+                <!-- <textarea name="mensaje" id="mensaje" cols="30" rows="10" class="mensaje"></textarea> -->
             </div>
         </div>
     </div>
